Fix horizontal scroll.

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -1,3 +1,6 @@
+body {
+    overflow-x: hidden;
+}
 #homepage {
     padding-bottom: 0;
 }
